--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
         "vite": "^5.0.0",
         "vue": "^3.4.0"
     },
-    "type": "module"
+    "type": "module",
+    "dependencies": {
+        "chart.js": "^3.9.1",
+        "vue-chart-3": "^3.1.8"
+    }
 }
