--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "illuminate/filesystem": "*",
         "inertiajs/inertia-laravel": "^0.6.8",
         "intervention/image": "^3.6",
+        "jenssegers/agent": "^2.6",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
