--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,10 @@
     },
     "require-dev": {
         "askdkc/breezejp": "^1.8",
+        "doctrine/dbal": "^3.8",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "1.29",
+        "laravel/dusk": "^8.2",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
