--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@vue/test-utils": "^2.4.6",
         "autoprefixer": "^10.4.12",
         "axios": "^1.1.2",
+        "jest": "^29.7.0",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.2.1",
