--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "test": "jest"
     },
     "devDependencies": {
         "@inertiajs/vue3": "^1.0.0",
