--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
         "test": "jest"
     },
     "devDependencies": {
+        "@babel/preset-env": "^7.24.7",
         "@inertiajs/vue3": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-vue": "^5.0.0",
         "@vue/test-utils": "^2.4.6",
+        "@vue/vue3-jest": "^29.2.6",
         "autoprefixer": "^10.4.12",
         "axios": "^1.1.2",
         "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.2.1",
