--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,5 +7,8 @@
             "ziggy-js": ["./vendor/tightenco/ziggy"]
         }
     },
-    "exclude": ["node_modules", "public"]
+    "exclude": ["node_modules", "public"],
+    "testEnvironmentOptions": {
+        "customExportConditions": ["node", "node-addons"]
+    }
 }
