--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "type": "module",
     "dependencies": {
         "chart.js": "^3.9.1",
+        "faker": "^6.6.6",
         "vue-chart-3": "^3.1.8"
     }
 }
