--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
         "@inertiajs/vue3": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-vue": "^5.0.0",
+        "@vue/babel-plugin-jsx": "^1.2.2",
         "@vue/babel-preset-app": "^5.0.8",
-        "@vue/test-utils": "^2.4.6",
+        "@vue/test-utils": "^2.4.0-alpha.2",
         "@vue/vue3-jest": "^29.2.6",
         "autoprefixer": "^10.4.12",
         "axios": "^1.1.2",
-        "jest": "^29.7.0",
+        "jest": "^26.6.3",
         "jest-environment-jsdom": "^29.7.0",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.31",
