--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "test": "jest"
+        "test": "vitest"
     },
     "devDependencies": {
         "@babel/preset-env": "^7.24.7",
@@ -13,11 +13,8 @@
         "@vue/babel-plugin-jsx": "^1.2.2",
         "@vue/babel-preset-app": "^5.0.8",
         "@vue/test-utils": "^2.4.0-alpha.2",
-        "@vue/vue3-jest": "^29.2.6",
         "autoprefixer": "^10.4.12",
         "axios": "^1.1.2",
-        "jest": "^26.6.3",
-        "jest-environment-jsdom": "^29.7.0",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.2.1",
@@ -28,6 +25,7 @@
     "dependencies": {
         "chart.js": "^3.9.1",
         "faker": "^5.5.3",
+        "vitest": "^1.6.0",
         "vue-chart-3": "^3.1.8"
     }
 }
