--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "@vue/babel-preset-app": "^5.0.8",
         "@vue/test-utils": "^2.4.0-alpha.2",
         "autoprefixer": "^10.4.12",
-        "axios": "^1.1.2",
+        "axios": "^1.3.2",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.2.1",
@@ -26,6 +26,7 @@
         "chart.js": "^3.9.1",
         "faker": "^5.5.3",
         "micromodal": "^0.4.10",
+        "v-tooltip": "^2.1.3",
         "vitest": "^1.6.0",
         "vue-chart-3": "^3.1.8"
     }
