--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "ext-imagick": "*",
         "ext-gd": "*",
+        "ext-imagick": "*",
         "barryvdh/laravel-debugbar": "^3.13",
+        "barryvdh/laravel-dompdf": "^3.0",
         "guzzlehttp/guzzle": "^7.2",
         "illuminate/filesystem": "*",
         "inertiajs/inertia-laravel": "^0.6.8",
