--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "micromodal": "^0.4.10",
         "v-tooltip": "^2.1.3",
         "vitest": "^1.6.0",
-        "vue-chart-3": "^3.1.8"
+        "vue-chart-3": "^3.1.8",
+        "vue-qrcode-reader": "^5.5.10"
     }
 }
