--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "ext-imagick": "*",
         "barryvdh/laravel-debugbar": "^3.13",
         "barryvdh/laravel-dompdf": "^3.0",
+        "barryvdh/laravel-snappy": "^1.0",
         "guzzlehttp/guzzle": "^7.2",
         "illuminate/filesystem": "*",
         "inertiajs/inertia-laravel": "^0.6.8",
@@ -19,7 +20,8 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "simplesoftwareio/simple-qrcode": "^4.2",
-        "tightenco/ziggy": "^2.0"
+        "tightenco/ziggy": "^2.0",
+        "wemersonjanuario/wkhtmltopdf-windows": "0.12.2.3"
     },
     "require-dev": {
         "askdkc/breezejp": "^1.8",
