fix:CIワークフローファイルを修正

--- a/.github/workflows/laravel-ci.yml
+++ b/.github/workflows/laravel-ci.yml
@@ -44,8 +44,15 @@ jobs:
       run: composer install --prefer-dist --no-progress --no-suggest
 
     - name: Create .env file
-      run: cp .env.example .env
-
+      run: |
+        cp .env.example .env
+        echo "DB_CONNECTION=mysql" >> .env
+        echo "DB_HOST=127.0.0.1" >> .env
+        echo "DB_PORT=3306" >> .env
+        echo "DB_DATABASE=test_database" >> .env
+        echo "DB_USERNAME=root" >> .env
+        echo "DB_PASSWORD=root" >> .env
+        
     - name: Generate application key
       run: php artisan key:generate
 
