--- a/.env.testing
+++ b/.env.testing
@@ -17,7 +17,7 @@ TESTING_DB_PASSWORD=password123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-FILESYSTEM_DISK=local
+FILESYSTEM_DISK=public
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
