--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "barryvdh/laravel-dompdf": "^3.0",
         "barryvdh/laravel-snappy": "^1.0",
         "guzzlehttp/guzzle": "^7.8",
+        "hikaeme/monolog-ltsv-formatter": "^3.0",
         "illuminate/filesystem": "*",
         "inertiajs/inertia-laravel": "^0.6.8",
         "intervention/image": "*",
@@ -19,6 +20,7 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "monolog/monolog": "^3.7",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "tightenco/ziggy": "^2.0",
         "wemersonjanuario/wkhtmltopdf-windows": "0.12.2.3"
@@ -33,6 +35,7 @@
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
+        "nunomaduro/larastan": "^2.9",
         "phpunit/php-code-coverage": "^10.1",
         "phpunit/phpunit": "^10.0",
         "spatie/laravel-ignition": "^2.0"
