--- a/phpstan.neon
+++ b/phpstan.neon
@@ -2,12 +2,11 @@ includes:
     - ./vendor/nunomaduro/larastan/extension.neon
 
 parameters:
-
+    # Level 9 is the highest level
+    level: 3
     paths:
         - app/
-
-    # Level 9 is the highest level
-    level: 5
+    inferPrivatePropertyTypeFromConstructor: true
 
 #    ignoreErrors:
 #        - '#PHPDoc tag @var#'
