--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "type": "module",
     "dependencies": {
         "chart.js": "^3.9.1",
+        "dompurify": "^3.1.7",
         "faker": "^5.5.3",
         "micromodal": "^0.4.10",
-        "v-tooltip": "^2.1.3",
+        "v-tooltip": "^1.1.6",
         "vitest": "^1.6.0",
         "vue-chart-3": "^3.1.8",
         "vue-qrcode-reader": "^5.5.10"
