--- a/package.json
+++ b/package.json
@@ -3,23 +3,32 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "test": "vitest"
+        "type-check": "vue-tsc --noEmit",
+        "test": "vitest",
+        "typegen": "laravel-typegen"
     },
     "devDependencies": {
+        "@7nohe/laravel-typegen": "^0.6.1",
         "@babel/preset-env": "^7.24.7",
         "@inertiajs/vue3": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
+        "@types/node": "^22.9.0",
+        "@types/ziggy-js": "^1.8.0",
         "@vitejs/plugin-vue": "^5.0.0",
         "@vue/babel-plugin-jsx": "^1.2.2",
         "@vue/babel-preset-app": "^5.0.8",
         "@vue/test-utils": "^2.4.0-alpha.2",
+        "@vue/tsconfig": "^0.5.1",
         "autoprefixer": "^10.4.12",
         "axios": "^1.3.2",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.2.1",
+        "typescript": "^5.6.3",
         "vite": "^5.0.0",
-        "vue": "^3.4.29"
+        "vue": "^3.4.29",
+        "vue-tsc": "^2.1.10",
+        "ziggy-js": "^2.4.0"
     },
     "type": "module",
     "dependencies": {
