feat:##243 micromodal.jsをmicromodal.tsにTypeScript対応、micromodalの型定義ファイルインストール

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,8 @@
         "resources/js/**/*.ts", 
         // "resources/js/**/*.tsx", 
         "resources/js/**/*.d.ts", 
-        "resources/js/**/*.vue"]
+        "resources/js/**/*.vue", 
+        "resources/js/micromodal.ts"
+      ]
   }
   
