--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@inertiajs/vue3": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
         "@types/dompurify": "^3.0.5",
+        "@types/micromodal": "^0.3.5",
         "@types/node": "^22.9.0",
         "@types/ziggy-js": "^1.8.0",
         "@vitejs/plugin-vue": "^5.0.0",
