--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "type": "module",
     "dependencies": {
         "chart.js": "^3.9.1",
+        "chartjs-plugin-annotation": "^1.4.0",
         "dompurify": "^3.1.7",
         "faker": "^5.5.3",
         "micromodal": "^0.4.10",
