fix:#223 Laravel SailからデプロイするようにDockerfileやdocker-compose.ymlなどのファイルを追加

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -5,18 +5,14 @@
 
     RewriteEngine On
 
-    # IPアドレスによるアクセス制限
-    # RewriteCond %{REMOTE_ADDR} !^193\.186\.4\.153$
-    # RewriteRule ^.*$ - [F,L]
-
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 
     # Redirect Trailing Slashes If Not A Folder...
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteCond %{REQUEST_URI} (.+)/$
-    RewriteRule ^ %1 [L,R=301]
+    # RewriteCond %{REQUEST_FILENAME} !-d
+    # RewriteCond %{REQUEST_URI} (.+)/$
+    # RewriteRule ^ %1 [L,R=301]
 
     # Send Requests To Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
