CICD:#223 ymlファイルの条件をプルリクエストがマージされたときに変更

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,6 +1,9 @@
 name: EMS Deploy Pipeline
 on:
-  push:  #プルリク時自動テスト、マージ時自動デプロイ
+  pull_request:  #プルリク時自動テスト、マージ時自動デプロイ
+    types: [closed]
+    branches: 
+      - main
     paths:
       - '**'
 
@@ -19,6 +22,7 @@ jobs:
 # Test
 # Build
   Build:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     defaults:
       run:
