--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -35,6 +35,7 @@ jobs:
         run: |
           cp .env.example .env
           
+          # APPの設定
           echo "APP_NAME=EMS" >> .env
           # APP_KEYは、イメージビルド時に「php artisan key:generate」を行う
           echo "APP_ENV=production" >> .env
@@ -42,12 +43,17 @@ jobs:
           echo "APP_URL=${{ secrets.PROD_APP_URL }}" >> .env
           echo "APP_PORT=80" >> .env
 
+          # DBの設定
           echo "DB_HOST=${{ secrets.PROD_DB_HOST }}" >> .env 
           echo "DB_DATABASE=${{ secrets.PROD_DB_DATABASE }}" >> .env
           echo "DB_USERNAME=${{ secrets.PROD_DB_USERNAME }}" >> .env
           echo "DB_PASSWORD=${{ secrets.PROD_DB_PASSWORD }}" >> .env
 
+          # セッションの設定
           echo "SESSION_DOMAIN=${{ secrets.PROD_SESSION_DOMAIN }}" >> .env
+
+          # ファイルシステムをs3に変更する設定
+          echo "FILESYSTEM_DISK=s3" >> .env
 
       - name: (Run Tests Feature Test ここは別jobに分離) Build Image
         run: docker image build -t temp_portfolio_image:latest .
