--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -66,6 +66,9 @@ jobs:
           echo "VITE_API_BASE_URL=${{ secrets.PROD_VITE_API_BASE_URL }}" >> .env
           echo "VITE_APP_URL=${{ secrets.PROD_VITE_APP_URL }}" >> .env
 
+          # SANCTUMの設定
+          echo "SANCTUM_STATEFUL_DOMAINS=${{ secrets.PROD_SANCTUM_STATEFUL_DOMAINS }}" >> .env
+
       - name: (Run Tests Feature Test ここは別jobに分離) Build Image
         run: docker image build -t temp_portfolio_image:latest .
 
