--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "league/csv": "^9.18",
+        "league/flysystem": "^3.0",
         "league/flysystem-aws-s3-v3": "^3.0",
         "monolog/monolog": "^3.7",
         "simplesoftwareio/simple-qrcode": "^4.2",
