--- a/.env.testing
+++ b/.env.testing
@@ -8,12 +8,13 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql_testing
-TESTING_DB_HOST=127.0.0.1
-TESTING_DB_PORT=3306
-TESTING_DB_DATABASE=ems_testing
-TESTING_DB_USERNAME=ems_testing
-TESTING_DB_PASSWORD=password123
+DB_CONNECTION=mysql
+DB_HOST=mysql-test
+DB_PORT=3306
+DB_DATABASE=ems_testing
+DB_USERNAME=ems_testing
+DB_PASSWORD=password123
+FORWARD_DB_PORT=3306
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
