--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
+LOG_SLACK_WEBHOOK_URL=
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -19,8 +20,11 @@ BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
+
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+SESSION_DOMAIN=localhost
+SESSION_COOKIE=
 
 MEMCACHED_HOST=127.0.0.1
 
@@ -42,6 +46,7 @@ AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
+S3_BUCKET_URL=
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
@@ -56,3 +61,7 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+VITE_API_BASE_URL=s
+VITE_APP_URL=
+
+SANCTUM_STATEFUL_DOMAINS=localhost,localhost:8000,127.0.0.1:8000
