fix:通知のダミーデータの画像パスを開発環境と本番環境で切り替えられるように修正

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -67,6 +67,9 @@ jobs:
           # SANCTUMの設定
           echo "SANCTUM_STATEFUL_DOMAINS=${{ secrets.PROD_SANCTUM_STATEFUL_DOMAINS }}" >> .env
 
+          # s3
+          echo "S3_BUCKET_URL=${{ secrets.PROD_S3_BUCKET_URL }}" >> .env
+
       - name: Build Image
         run: docker image build -t temp_portfolio_image:latest .
 
