--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,7 @@ jobs:
       - name: Create .env file
         run: |
           cp .env.testing .env
+          echo "DB_HOST=mysql" >> .env
           # (テスト用の環境変数を設定)
 
       - name: Generate application key
