CICD:#223 .env.testingにアプリケーションキーを作成するようにci.ymlファイルを修正

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,7 +61,7 @@ jobs:
           echo "DB_HOST=mysql" >> .env.testing
 
       - name: Generate application key
-        run: php artisan key:generate
+        run: php artisan key:generate --env=testing
 
       - name: Run migrations
         run: php artisan migrate --env=testing
