--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,7 @@ jobs:
       # Set DB_HOST in .env.testing for CI environment
       - name: Set DB_HOST in .env.testing
         run: |
+          echo "" >> .env.testing  # 改行を追加
           echo "DB_HOST=mysql" >> .env.testing
 
       - name: Display .env.testing content
