--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,6 +67,10 @@ jobs:
       - name: Generate application key
         run: php artisan key:generate --env=testing
 
+      # Wait for MySQL to be ready
+      - name: Wait for MySQL to be ready
+        run: dockerize -wait tcp://mysql:3306 -timeout 1m
+
       - name: Run migrations
         run: php artisan migrate --env=testing
 
