--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,10 +59,10 @@ jobs:
         run: cp .env.testing .env
 
       # Install dockerize
-      - name: Install dockerize
-        run: |
-          wget -qO- https://github.com/jwilder/dockerize/releases/download/v0.6.1/dockerize-linux-amd64-v0.6.1.tar.gz | tar xvz -C /usr/local/bin
-          dockerize --version
+      # - name: Install dockerize
+      #   run: |
+      #     wget -qO- https://github.com/jwilder/dockerize/releases/download/v0.6.1/dockerize-linux-amd64-v0.6.1.tar.gz | tar xvz -C /usr/local/bin
+      #     dockerize --version
 
       - name: Generate application key
         run: php artisan key:generate
