CICD:#223 .envにDB_HOSTの情報を追加

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,6 +71,11 @@ jobs:
       # - name: Wait for MySQL to be ready
       #   run: dockerize -wait tcp://mysql:3306 -timeout 2m
 
+      - name: Set DB_HOST in .env for CI environment
+        run: |
+          sed -i '/DB_HOST/d' .env  # 既存のDB_HOST設定を削除
+          echo "DB_HOST=mysql" >> .env  # 新しい設定を追加
+
       - name: Display environment variables
         run: printenv
 
