--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,8 +90,8 @@ jobs:
       # - name: Display environment variables
       #   run: printenv
 
-      - name: Test MySQL connection
-        run: ping -c 4 mysql
+      # - name: Test MySQL connection
+      #   run: ping -c 4 mysql
 
       - name: migrate in .env
         run: php artisan migrate
