--- a/.env.testing
+++ b/.env.testing
@@ -9,7 +9,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql-test
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=ems_testing
 DB_USERNAME=ems_testing
