--- a/.env.example
+++ b/.env.example
@@ -12,11 +12,11 @@ LOG_LEVEL=debug
 LOG_SLACK_WEBHOOK_URL=
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=ems
 DB_USERNAME=ems
-DB_PASSWORD=
+DB_PASSWORD=password
 FORWARD_DB_PORT=3306
 
 BROADCAST_DRIVER=log
