--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,8 +78,8 @@ jobs:
       - name: Display .env content
         run: cat .env
 
-      - name: Test MySQL connection
-        run: ping -c 4 mysql
+      # - name: Test MySQL connection
+      #   run: ping -c 4 mysql
 
       - name: migrate in .env
         run: php artisan migrate
