--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@ DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=ems
 DB_USERNAME=ems
-DB_PASSWORD=password
+DB_PASSWORD=password123
 FORWARD_DB_PORT=3306
 
 BROADCAST_DRIVER=log
