CICD:#223 docker-compose用のアクションを修正

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Set up Docker Compose
-        uses: docker/setup-compose@v1
+        uses: docker/setup-compose-action@v1
         with:
           version: latest
       - name: Build and start services
