CICD:#223 docke composeコマンドを修正

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,6 @@ jobs:
         with:
           version: latest
       - name: Build and start services
-        run: docker-compose up -d
+        run: docker compose up -d
       - name: Run Laravel Sail tests
         run: ./vendor/bin/phpunit
