CICD:#223 .env.testingを使用する用修正、DB_HOST=mysql-testとして名前解決を図る

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
           version: latest
 
       - name: Copy .env.example to .env
-        run: cp .env.example .env
+        run: cp .env.testing .env
 
       - name: Build and start services
         run: docker compose up -d
