--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -25,6 +25,8 @@ services:
 
   mysql-test:
     image: mysql:8.0
+    ports:
+      - "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
       MYSQL_DATABASE: ems_testing
