--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,84 +7,77 @@ on:
       - main
     paths:
       - '**'
+  workflow_dispatch:
+env:
+  DB_CONNECTION: mysql
+  DB_HOST: 127.0.0.1
+  DB_PORT: 3306
+  DB_DATABASE: ems
+  DB_USERNAME: ems
+  DB_PASSWORD: password
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest[
+    timeout-minutes: 20
+    services:
+      db:
+      image: mysql/mysql-server:8.0
+        ports:
+          - 3306:3306
+      env:
+          MYSQL_DATABASE: 'ems'
+          MYSQL_USER: 'ems'
+          MYSQL_PASSWORD: 'password'
+          MYSQL_ROOT_PASSWORD: 'password'
+          MYSQL_ALLOW_EMPTY_PASSWORD: 1
+        options: >-
+          --health-cmd "mysqladmin ping"
+          --health-start-period 30s
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Docker Compose
-        uses: docker/setup-compose-action@v1
-        with:   
-          file: ./docker-compose.yml  # ここにファイル名を指定
-          version: latest
+      - name: Setup PHP with composer v2
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: 8.2
+          tools: composer:v2
+
+      - name: Cache Vendor
+        id: cache-vendor
+        uses: actions/cache@v4
+        with:
+          path: ./vendor
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: ${{ runner.os }}-composer-
+
+      - name: Install Dependencies
+        if: steps.cache-vendor.outputs.cache-hit != 'true'
+        run: composer install --quiet --prefer-dist --no-progress --no-interaction --no-scripts --no-ansi
       
-      - name: Install dockerize
+      - name: Laravel Setting
         run: |
-          wget -qO- https://github.com/jwilder/dockerize/releases/download/v0.6.1/dockerize-linux-amd64-v0.6.1.tar.gz | tar xvz -C /usr/local/bin
-          dockerize --version
-
-      - name: Copy .env.testing to .env
-        run: cp .env.testing .env
-
-      - name: Set up environment variables
-        run: |
-          echo "WWWGROUP=www-data" >> .env
-          echo "WWWUSER=www-data" >> .env
-
-      - name: Build and start services
-        run: docker compose up -d
-
-      - name: List running containers
-        run: docker container ls
-
-      - name: Inspect MySQL logs
-        run: docker-compose logs mysql-test
-        
-      # MySQLコンテナが立ち上がるまで待つ
-      # - name: Wait for MySQL to be ready
-      #   run: dockerize -wait tcp://mysql-test:3306 -timeout 5m
+          cp .env.example .env
+          php artisan optimize
+          git config --local core.fileMode false
+          chmod -R 777 storage bootstrap/cache
       
-      # - name: Wait for Laravel App to be ready
-      #   run: dockerize -wait http://my-laravel-app:80 -timeout 5m
+      - name: PHP Version
+        run: php --version
+      - name: Composer Version
+        run: composer --version
+      - name: Laravel Version
+        run: php artisan --version
+      - name: Composer Validate 
+      
+      - name: Wait for MySQL to be ready
+        run: sleep 60
 
-      - name: Inspect services
-        run: docker compose ps
+      - name: Run Migrate
+        run: php artisan migrate
 
-      - name: Inspect Docker network
-        run: docker network ls
-
-      - name: Test MySQL connection
-        run: docker compose exec EMS ping -c 4 mysql-test
-
-      - name: Check MySQL status
-        run: docker compose exec mysql-test mysqladmin ping -ppassword123
-
-      - name: Inspect Docker bridge network details
-        run: docker network inspect bridge
-
-      - name: Inspect Docker bridge network ems_sail details
-        run: docker network inspect ems_sail
-
-      - name: Test MySQL connection
-        run: docker compose exec my-laravel-app ping -c 4 mysql-test
-
-      # 最新の依存関係を反映
-      - name: Install dependencies
-        run: docker compose exec my-laravel-app composer install --prefer-dist --no-progress --no-suggest
-
-      - name: Generate application key
-        run: docker compose exec my-laravel-app php artisan key:generate --env=testing
-
-      - name: Run migrations
-        run: docker compose exec my-laravel-app php artisan migrate --env=testing
-
-      - name: Run feature tests via PHPUnit
-        run: docker compose exec my-laravel-app php artisan test --env=testing
-
-      - name: Stop and remove containers
-        run: docker compose down
-
-      # - name: Run Laravel Sail tests
-      #   run: ./vendor/bin/phpunit
+      - name: Run Tests
+        run: php artisan test
