--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,4 +81,4 @@ jobs:
         run: php artisan migrate
 
       - name: Run Tests
-        run: php artisan test
+        run: php artisan test --testsuite=Feature
