--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,6 +77,9 @@ jobs:
       - name: Wait for MySQL to be ready
         run: sleep 60
 
+      - name: Generate Application Key
+        run: php artisan key:generate
+
       - name: Run Migrate
         run: php artisan migrate
 
