CICD:#223 アプリケーションキーが作成されているか表示して確認する

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,6 +80,15 @@ jobs:
       - name: Generate Application Key
         run: php artisan key:generate
 
+      - name: Clear Configuration Cache
+        run: php artisan config:cache
+
+      - name: Verify Application Key
+        run: grep "APP_KEY=" .env
+
+      - name: Display .env Contents
+        run: cat .env
+
       - name: Run Migrate
         run: php artisan migrate
 
